--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -120,7 +120,8 @@ jobs:
     - name: Get tor version
       run: |
         cd $GITHUB_WORKSPACE
-        TOR_VERSION=$(env.sh | grep " TOR_VERSION" | sed -e 's/export TOR_VERSION=//' -e 's/\"//g'| tail -1)
+        TOR_VERSION=$(cat env.sh | grep " TOR_VERSION" | sed -e 's/export TOR_VERSION=//' -e 's/\"//g'| tail -1)
+        echo $TOR_VERSION
         echo $TOR_VERSION >> $GITHUB_ENV
 
     - name: compile tor
