--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -122,7 +122,7 @@ jobs:
         cd $GITHUB_WORKSPACE
         TOR_VERSION=$(cat env.sh | grep " TOR_VERSION" | sed -e 's/export TOR_VERSION=//' -e 's/\"//g'| tail -1)
         echo $TOR_VERSION
-        echo $TOR_VERSION >> $GITHUB_ENV
+        echo "TOR_VERSION=$TOR_VERSION" >> $GITHUB_ENV
 
     - name: compile tor
       id: compile
