--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -171,4 +171,4 @@ jobs:
         name: ${{ env.OPNAME }}
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
-        files: ${{ env.BINARY }}/*
+        files: ${{ env.BINARY }}
