--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -126,7 +126,9 @@ jobs:
         echo $TOR_VERSION
         echo $TOR_HASH
         echo "TOR_VERSION=$TOR_VERSION" >> $GITHUB_ENV
+        echo -n $'\n' >> env.sh
         echo "export TOR_VERSION=$TOR_VERSION" >> env.sh
+        echo -n $'\n' >> env.sh
         echo "export TOR_HASH=$TOR_HASH" >> env.sh
 
     - name: compile tor
