--- a/.github/workflows/bulid_all.yml
+++ b/.github/workflows/bulid_all.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [linux_amd64, linux_arm64, mingw-win32]
+        platform: [linux_amd64, linux_arm64, mingw_win32]
     runs-on: ubuntu-20.04
 
     steps:
